work on fixing translation for simulation